fixed z-index of lang swittcher

--- a/src/components/language Switcher/language-switcher.module.css
+++ b/src/components/language Switcher/language-switcher.module.css
@@ -2,12 +2,11 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    background-color: red;
+    z-index: 3;
 }
 
 .languagesButtons button {
-    /* background-color: transparent; */
-    background-color: yellow;
+    background-color: transparent;
     border: none;
     border-radius: 4px;
     padding: 2px;
@@ -18,14 +17,18 @@
     cursor: pointer;
 }
 
-/* .currentSelectionLanguage button {
+.currentSelectionLanguage button {
     background-color: rgb(205, 205, 205);
     pointer-events: none;
 }
 
 .otherLanguages button {
     background-color: rgb(245, 245, 245);
-} */
+}
+
+.languagesButtonsHover {
+    height: 200px;
+}
 
 .languagesButtonsHover button {
     width: 120px;
@@ -48,8 +51,4 @@
 /* Preventing clicks on disabled buttons */
 .disabledButton {
     pointer-events: none;
-}
-
-.test {
-    background-color: burlywood;
 }
